2009-03-27  Noboru Saitou  <noborus@netlab.jp>

	* Ver 1.4.4 release

2009-03-13  Noboru Saitou  <noborus@netlab.jp>

	* libs/monstring.c: StrnDupの追加

2008-01-25  Noboru Saitou  <noborus@netlab.jp>

	* configure.ac: autoconf更新,　LIBMONDAI_VERSIONをVERSIONに変更

2008-01-18  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/others.c (ExpandPath): 環境変数やシェルの実行結果を取り込むことが出来るようにした(要するにshellの文字列定義と同じ)

2008-01-14  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/OpenCOBOL.c (IntegerCobol2C): OpenCOBOLのバイナリフォーマット変更に追従

2007-12-19  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/monstring.c (StrToInt): 小数点以下を正しく切り捨てる

2007-11-21  Noboru Saitou  <noborus@netlab.jp>

	* configure.in: configure.ac に変更
	* configure.ac: autoupdateで更新

2007-10-26  Masami Ogoshi  <ogochan@nurs.or.jp>

	* configure.in: glibをglib2にした

2007-10-25  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/json.c (JSON_Parse): JSONから型定義なしにValueStructを作成

2007-09-28  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/lock.c: 多重ロックを前提とするために追加

2007-09-26  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/Lex.c (Lex): 正規表現の読み込み

2007-09-17  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/memory.c: thread safeに

	* src/lock.h: ロック関係のマクロ(pandaから移動)

2007-09-14  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/valueconv.c (DuplicateConvOpt): 追加(あると便利)

2007-09-13  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/value.c (DuplicateValue, MakeValueArray): 内容の複製を制御

2007-09-12  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/memory_v.h (NewArea): GetAreaによるNew

2007-09-11  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/libmondai.h.in: JSON, PHP追加

2007-08-21  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/json.c: JSONの処理追加

2007-08-05  Masami Ogoshi  <ogochan@nurs.or.jp>

	* configure.in: Ver 1.3.9リリース(次回stable版は1.4.0)

2007-08-03  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/value.h: 日付時刻型、日付型、時刻型のサポート(デバッグは追い追い)

2007-07-30  Masami Ogoshi  <ogochan@nurs.or.jp>

	* src/Native.c (NativeUnPackValue, NativePackValue)
	(NativeSizeValue): GL_TYPE_OBJECTの実体ファイル名の保持
