@@ -1,3 +1,12 @@
+2009-08-31  yusuke mihara  <mihara@netlab.jp>
+
+	* getset.c value.c: i18nでSetValueStringWithLengthが使えるよう修正
+	GL_TYPE_{CHAR,VARCHAR,SYMBOL}をExpandableにした
+
+2009-08-03  yusuke mihara  <mihara@netlab.jp>
+	
+	* Native.c: NetiveUnPackValueNewを追加
+
 2009-03-27  Noboru Saitou  <noborus@netlab.jp>
 
 	* Ver 1.4.4 release
